--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "Frontend worker. Build & watch frontend files webpack/babel/stylus/postCss",
   "main": "webpack.config.js",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "webpack": "^3.6.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development webpack --progress",
+    "build": "NODE_ENV=production webpack --progress"
   },
   "author": "Alec Povolotskiy <a.povolotskiy@gmail.com>",
   "license": "ISC",
@@ -15,5 +20,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Zlodej43sm/frontend__worker__webpack.git"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0"
   }
 }
